objects/SFDC_Related_Bug__c.object
<CustomObject>
    <description>Connector object to relate Bugs.</description>
    <fields>
        <fullName>Reverse_Relationship__c</fullName>
        <label>Reverse Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Bug_Num__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Bug Num:</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N46000003QciuEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N46000003QckTEAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Subset</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identifying</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Won&apos;t Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <type>Date</type>
    </fields>
    <label>Related Bug</label>
    <nameField>
        <displayFormat>BugRel-{00000}</displayFormat>
        <label>Related Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>